src/metrics/snapshots/big_code_analysis__metrics__loc__tests__java_lambda_in_method_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 6,
  "ploc": 6,
  "lloc": 2,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 2.0,
  "ploc_average": 2.0,
  "lloc_average": 0.6666666666666666,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 4,
  "sloc_max": 6,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 4,
  "ploc_max": 6,
  "lloc_min": 2,
  "lloc_max": 2,
  "blank_min": 0,
  "blank_max": 0
}
