src/metrics/snapshots/big_code_analysis__metrics__loc__tests__java_local_class_in_method_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 8,
  "ploc": 8,
  "lloc": 2,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 1.6,
  "ploc_average": 1.6,
  "lloc_average": 0.4,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 1,
  "sloc_max": 8,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 1,
  "ploc_max": 8,
  "lloc_min": 1,
  "lloc_max": 2,
  "blank_min": 0,
  "blank_max": 0
}
