src/metrics/snapshots/big_code_analysis__metrics__loc__tests__javascript_arrow_function_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 4,
  "ploc": 4,
  "lloc": 2,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 1.3333333333333333,
  "ploc_average": 1.3333333333333333,
  "lloc_average": 0.6666666666666666,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 1,
  "sloc_max": 4,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 1,
  "ploc_max": 4,
  "lloc_min": 0,
  "lloc_max": 2,
  "blank_min": 0,
  "blank_max": 0
}
