src/metrics/snapshots/big_code_analysis__metrics__loc__tests__javascript_blank.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 7,
  "ploc": 4,
  "lloc": 1,
  "cloc": 1,
  "blank": 2,
  "sloc_average": 3.5,
  "ploc_average": 2.0,
  "lloc_average": 0.5,
  "cloc_average": 0.5,
  "blank_average": 1.0,
  "sloc_min": 6,
  "sloc_max": 7,
  "cloc_min": 0,
  "cloc_max": 1,
  "ploc_min": 4,
  "ploc_max": 4,
  "lloc_min": 1,
  "lloc_max": 1,
  "blank_min": 2,
  "blank_max": 2
}
