src/metrics/snapshots/big_code_analysis__metrics__loc__tests__javascript_cloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 6,
  "ploc": 3,
  "lloc": 2,
  "cloc": 4,
  "blank": 0,
  "sloc_average": 3.0,
  "ploc_average": 1.5,
  "lloc_average": 1.0,
  "cloc_average": 2.0,
  "blank_average": 0.0,
  "sloc_min": 3,
  "sloc_max": 6,
  "cloc_min": 1,
  "cloc_max": 4,
  "ploc_min": 3,
  "ploc_max": 3,
  "lloc_min": 2,
  "lloc_max": 2,
  "blank_min": 0,
  "blank_max": 0
}
